		- module-octave and multithread support incompatible
	Bug fixes:
		- simplify escaping of delimiter in input
		- fix deformable hinge early Jacobian assembly
		  (noted by Filippo Tunesi)
		- fix conjugate transpose of `X' in pod.m
		- fix modal element when origin redefined
		  (noted by Sebastiano Fichera)
		- fix block 11 one row too much in output of femgen
		  (noted by Sebastiano Fichera)

MBDyn 1.5.3
	Enhancements:
		- added forces NetCDF support (Louis Gagnon)
		- added support for modal damping matrix in modal joint db
		- femgen(1) more user friendly (and documented)
	Backward compatibility issues:
		- nodes and elements now handled in strict input order
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix multiple statements bug in string drive caller
		- fix (harmless) memory issue in structural mapping force
		- fix integer division bug in aeromodal element

MBDyn 1.5.2
	Enhancements:
		- added AfterPredict & Restart to module-octave
		  (Reinhard Resch)
		- added inverse square constitutive law
	Backward compatibility issues:
		- "index" form for priv data is deprecated
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix restart bug (Reinhard Resch)
		- fix initialization issues (Marco Morandini)
		- fix dist of mbc_py_interface.py (noted by Gaël Ecorchard)

MBDyn 1.5.1
	Enhancements:
		- added "ifndef" declaration modifier for var redefinition
		- added module-nodedistdrive (Reinhold Resch)
	Backward compatibility issues:
		- moved GRAALL damper to module-damper-graall
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible